			SWI-Prolog ChangeLog
			====================

  * FIXED: module-transparency of is/2, etc to make arithmetic function
    declarations work again.  Steve Moyle.

  * ADDED: edit/0 to edit the default script- (-s file) or associated file.

  * LIBRARY: make read_line_to_codes return the atom end_of_file upon reaching
    the end of file.

  * PORT: improve portability of SWI-Prolog.h and SWI-cpp.h after comments
    from Silvio Malisani concerning Borland's C++ Builder 5.I.

  * FIXED: preserve exceptions with the GUI-tracer over callbacks to the
    tracer.


VERSION 5.1.0 (Oct 26, 2002)
============================

  * FIXED: call_cleanup/3 when called directly from PL_next_solution()
    or tail-recursively from the initial goal.

  * ENHANCED: use per-message-queue mutex for synchronising the
    queue access in the MT version.  Sergey Tikhonov.

  * PORT: Check whether mmap() can map regular files and check for
    the need of _XOPEN_SOURCE.  Fixes QNX portability. See
    http://gollem.swi.psy.uva.nl/twiki/pl/bin/view/Porting/BuildQNX
    
  * ENHANCED: allocate clause as one chunck, reducing allocations and
    memory-requirements and improving locality.

  * ENHANCED: Multi-threaded performance:

	- No longer use reference-counts on static code but use clause
	  garbage collection to collect redefined static procedures.
	- Large reduction of access to thread-local data by passing
	  this data around and use one-fetch-per-function more widely.
	- Introduced thread-local heap-allocation policy to reduce
	  the use of locks.

  * ADDED: multi-threading support in the windows version based on
    pthread-win32, an Open Source emulation of POSIX threads on
    Win32.  Progress:

	- Kernel running on top of pthread-win32
	- Console code (plterm.dll/plwin.exe) allows for multiple consoles
	- Basics seem to work fine.
	- Now uses CRITICAL_SECTIONS and Windows native TslGetValue() to
	  improve performance.  Slow down is now 12% compared to
	  single-threading.
